# Flutter-Rust-Administer_System

./: README.md  aniya  aniya.db  pubspec.yaml  sample_server.py
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/my_final_web/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: first_page.dart  grade_class.dart  main.dart  proxy_config.dart  second_page.dart  third_page.dart  web_controller.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: select_class.dart  simple.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  aniya
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  select_class.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_my_final_web.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_my_final_web.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
