[package]
name = "rust_lib_my_final_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }

wasm-bindgen = "0.2.95"
